# budna-mcp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.agents/skills/budna-mcp-safe-change/: SKILL.md
.agents/skills/budna-mcp-safe-change/agents/: openai.yaml
.codex/: config.toml
.codex/rules/: default.rules
.github/: dependabot.yml
.github/scripts/: publish-crate.sh
.github/workflows/: core.yml  release.yml
crates/budna-mcp/: Cargo.toml
crates/budna-mcp-client/: Cargo.toml  LICENSE
crates/budna-mcp-client/src/: config.rs  error.rs  lib.rs  models.rs
crates/budna-mcp-core/: Cargo.toml
crates/budna-mcp-core/src/: config.rs  lib.rs  policy.rs
crates/budna-mcp-server/: Cargo.toml
crates/budna-mcp-server/assets/: THIRD_PARTY_NOTICES.txt  marketplace-explorer-v1.html
crates/budna-mcp-server/src/: lib.rs  mcp_apps.rs  output.rs  params.rs  tools.rs
crates/budna-mcp-server/src/output/: common.rs  listings.rs  profiles.rs  taxonomy.rs
crates/budna-mcp/src/: cli.rs  http_transport.rs  main.rs
crates/budna-mcp/tests/: stdio_protocol.rs  streamable_http_protocol.rs
docs/: mcp-apps.md
scripts/: check_public_surface.py
ui/marketplace-explorer/: marketplace-explorer-v1.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/marketplace-explorer/scripts/: check-asset.mjs
ui/marketplace-explorer/src/: bridge.ts  explorer.ts  i18n.ts  main.ts  model.ts  runtime-config.ts  style.css
ui/marketplace-explorer/test/: bridge.test.ts  explorer.test.ts  fixtures.ts  layout.test.ts  model.test.ts  runtime-config.test.ts
