[package]
name = "budna-mcp-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "HTTP client and wire contracts for the public Budna marketplace API"
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
httpdate.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true

[lints]
workspace = true
