[package]
name = "budna-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
budna-mcp-client.workspace = true
budna-mcp-core.workspace = true
budna-mcp-server.workspace = true
clap.workspace = true
http.workspace = true
rmcp.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
wiremock.workspace = true

[lints]
workspace = true
